<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="v_departure_station" type="id" />
    <item name="v_arrival_station" type="id" />
    <item name="rl_going_date" type="id" />
    <item name="tv_value_passenger" type="id" />
    <item name="stationNameEdit" type="id" />
    <item name="station_result" type="id" />
    <item name="date_cell_tomorrow" type="id" />
    <item name="hourTxt06" type="id" />
    <item name="hourTxt09" type="id" />
    <item name="hourTxt12" type="id" />
    <item name="confirm_button" type="id" />
    <item name="adult_count" type="id" />
    <item name="adult_plus" type="id" />
    <item name="child_count" type="id" />
    <item name="child_plus" type="id" />
    <item name="passenger_confirm" type="id" />
    <item name="search_trains" type="id" />
    <item name="trainList" type="id" />
    <item name="reserveButton204" type="id" />
    <item name="reserveButton206" type="id" />
    <item name="reserveButton1112" type="id" />
    <item name="booking_button" type="id" />
    <item name="payment_button" type="id" />
</resources>
